# chips

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  TODO  c++1y_test.cpp  pirate_tileset.tsx
example/: entity.cpp
include/chips/: #core.hpp#  attribute.hpp  chips_error.hpp  chips_main.hpp  chips_state.hpp  config.hpp  core.hpp  draw.hpp  entity.hpp  entity_factory.hpp  entity_fwd.hpp  entity_id.hpp  error.hpp  font_handler.hpp  font_manager.hpp  fwd.hpp  game.hpp  game_grid.hpp  game_handler.hpp  game_object_visitor.hpp  gameobject.hpp  gameobjectfactory.hpp  gamestate.hpp  inputHandler.hpp  inputhandler.hpp  inventory.hpp  level.hpp  loader.hpp  log.hpp  logic.hpp  menu.hpp  menustate.hpp  methods.hpp  parse.hpp  parser.hpp  player.hpp  position.hpp  render.hpp  renderer.hpp  resource_manager.hpp  (+11 more)
include/chips/core/: chips_state.hpp  config.hpp  direction.hpp  entity_id.hpp  entity_locator.hpp  error.hpp  fwd.hpp  id.hpp  inventory.hpp  level.hpp  load.hpp  log.hpp  position.hpp  tile_id.hpp
include/chips/entity/: attribute.hpp  concept.hpp  entity.hpp  filter.hpp  fwd.hpp  method.hpp
include/chips/game/: common.hpp  create_entity.hpp  direction.hpp  entity_locator.hpp  fwd.hpp  inventory.hpp  load.hpp  position.hpp
include/chips/game_objects/: fwd.hpp
include/chips/logic/: actors.hpp  attributes.hpp  base.hpp  chip.hpp  common.hpp  concepts.hpp  core.hpp  create_entity.hpp  dispatch.hpp  fwd.hpp  items.hpp  methods.hpp  tick.hpp
include/chips/menu/: core.hpp  menu_handler.hpp  parse.hpp  text_button.hpp
include/chips/methods/: chip.hpp
include/chips/tiles/: chip.hpp  fwd.hpp  monster.hpp  support.hpp  tile.hpp
include/chips/visitors/: fwd.hpp  tile_visitor.hpp  void_visitor.hpp
levels/: level_15_OLD.tmx  level_2.tmx  level_3.tmx  level_4.tmx  level_6.tmx  level_7.tmx  level_8.tmx  level_9.tmx
modules/: FindSDL2_image.cmake  FindSDL2_net.cmake
res/: action_list.xml  actions8.xml  actions_5.xml  chip 3.pxi  chip 4.pxi  convert.py  default_tileset.tsx  entity.xml  level1.tmx  level1.tmx_NEW  level1.xml  level15.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx  level7.tmx  level8.tmx  level_1.tmx  level_10.tmx  level_15.tmx  level_2.tmx  level_4.tmx  level_5.tmx  level_6.tmx  level_7.tmx  level_8.tmx  level_test.tmx  main_menu.xml  new_level1.tmx  pirate_tileset.tsx  tileset.tsx
res/BAK/: level7.tmx_BAK  level8.tmx_BAK
res/levels/: actions_9.xml  level_1.tmx  level_5.tmx  level_test.tmx
res/misc/: pirate_tileset.tsx  tileset.tsx  tileset2.tsx
res/misc/BAK/: level1.tmx_BAK2  level10.tmx_BAK  level2.tmx_BAK  level3.tmx_BAK  level4.tmx_BAK  level5.tmx_BAK
src/: #CMakeLists.txt#  CMakeLists.txt  main.cpp
src/chips/: #chips_main.cpp#  #game.cpp#  #inputhandler.cpp#  .#chips_main.cpp  Game.cpp  Game.h  chips_error.cpp  chips_main.cpp  chips_state.cpp  core.cpp  draw.cpp  elib_test.cpp  entity.cpp  entity_factory.cpp  entity_id.cpp  error.cpp  font_handler.cpp  font_manager.cpp  game.cpp  game_handler.cpp  gameobject.cpp  gameobjectfactory.cpp  inputhandler.cpp  level.cpp  loader.cpp  menustate.cpp  parse.cpp  parser.cpp  player.cpp  renderer.cpp  resource_manager.cpp  sdl_system_handler.cpp  sounds.cpp  texture_id.cpp  texture_manager.cpp  texturemanager.cpp  window.cpp
src/chips/core/: chips_state.cpp  entity_id.cpp  id.cpp  inventory.cpp  level.cpp  load.cpp  tile_id.cpp
src/chips/game/: actors.cpp  base.cpp  chip.cpp  common.cpp  inventory.cpp  item.cpp  load.cpp
src/chips/logic/: actors.cpp  attributes.cpp  base.cpp  chip.cpp  common.cpp  core.cpp  item.cpp  methods.cpp
src/chips/menu/: core.cpp  menu_handler.cpp  parse.cpp  text_button.cpp
src/chips/tiles/: chip.cpp  monster.cpp  support.cpp  tile.cpp
src/chips/unit_tests/: entity_test.cpp
src/chips/visitors/: build.cmake  void_visitor.cpp
src/tinyxml/: tinyxml.cpp  tinyxmlparser.cpp
tiles/: ._floor.pxi  ball.pxi  bar-1.pxi  bar.pxi  block.pxi  blue-wall.pxi  bug-horiz.pxi  bug-vert.pxi  burnt chipt-1.pxi  burnt chipt.pxi  cannon 2.pxi  cannon 3.pxi  cannon 4.pxi  cannon.pxi  chip 1.pxi  chip 2-1.pxi  chip 2.pxi  chip 3.pxi  chip 4.4-1.pxi  chip 4.4.pxi  chip 4.pxi  chip 5.pxi  chip 6-1.pxi  chip 6.pxi  chip 7-1.pxi  chip 7.pxi  chip 8-1.pxi  chip 9-1.pxi  chip burnt-1.pxi  chip burnt.pxi  dirt.pxi  downarrow.pxi  exit.pxi  fake-exit.pxi  fat zombie back.pxi  fat zombie west.pxi  fat zombie.pxi  fire-1.pxi  fire.pxi  floor.pxi  (+37 more)
tiles/scripts/: extract.sh  script.py  tile-0-1-c.pxi
